--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "sass": "^1.32.10"
   },
   "devDependencies": {
-    "bootstrap": "^4.6.0",
+    "bootstrap": "5",
     "gatsby-plugin-i18n": "^1.0.1"
   }
 }
