--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-sitemap": "^3.3.0",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-sharp": "^3.3.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "bootstrap": "5",
+    "eslint-config-react-app": "^6.0.0",
     "gatsby-plugin-i18n": "^1.0.1"
   }
 }
