--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-intl": "^5.15.8",
-    "sass": "^1.32.10"
+    "sass": "^1.32.10",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "bootstrap": "5",
