--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "axios": "^0.21.1",
+    "babel-eslint": "^10.1.0",
+    "bootstrap": "5",
     "classnames": "^2.3.1",
+    "eslint-config-react-app": "^6.0.0",
     "flickity": "^2.2.2",
     "gatsby": "^3.2.1",
     "gatsby-plugin-google-analytics": "^3.3.0",
     "gatsby-plugin-google-gtag": "^3.4.0",
+    "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-image": "^1.3.0",
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-manifest": "^3.3.0",
@@ -34,16 +38,12 @@
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-sharp": "^3.3.0",
     "lodash": "^4.17.21",
+    "plyr": "^3.6.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-intl": "^5.15.8",
     "sass": "^1.32.10",
     "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "bootstrap": "5",
-    "eslint-config-react-app": "^6.0.0",
-    "gatsby-plugin-i18n": "^1.0.1"
   }
 }
