--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-intl": "^5.15.8",
+    "react-transition-group": "^4.4.2",
     "sass": "^1.32.10",
     "uuid": "^8.3.2"
   }
