--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "classnames": "^2.3.1",
     "eslint-config-react-app": "^6.0.0",
     "flickity": "^2.2.2",
+    "formik": "^2.2.9",
     "gatsby": "^3.2.1",
     "gatsby-plugin-google-analytics": "^3.3.0",
     "gatsby-plugin-google-gtag": "^3.4.0",
@@ -46,6 +47,7 @@
     "react-intl": "^5.15.8",
     "react-transition-group": "^4.4.2",
     "sass": "^1.32.10",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
   }
 }
