filip(feat): add posthog to site

--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "react-transition-group": "^4.4.2",
     "sass": "^1.32.10",
     "uuid": "^8.3.2",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "dayjs": "^1.11.9",
+    "posthog-js": "^1.76.0"
   }
 }
